@@ -30,6 +30,9 @@
  - Added a new API: install plugin 
 2022-05-03
  - Handled redundant plugin installation 
+2022-05-04
+ - Added super client id to install plugin table 
+
  
 # version 0.65.2
 
